# kchildlock

./: .directory  CMakeLists.txt  ChangeLog  Doxyfile  INSTALL  Messages.sh  TODO  cleanup_and_build  cleanup_src  install_manifest.txt  kchildlock.kdevelop  kchildlock.kdevelop.filelist  kchildlock.kdevelop.pcs  kchildlock.kdevses
common/: CMakeLists.txt  kchildlock_settings.kcfg  kchildlock_settings.kcfgc  kchildlockcommon.h  kchildlockrc
daemon/: .directory  CMakeLists.txt  KchildlockDaemon.cpp  KchildlockDaemon.h  check_user_limits.cpp  consumption_file.cpp  consumption_file.h  dummy.txt  get_user_limits.cpp  kchildlockdaemon.desktop  systray_status.cpp  systray_status.h  userInfoPage.ui  user_session.cpp  warn_finishapp.cpp  warn_logout.cpp
debian/: changelog  control  copyright  docs  kchildlock.lintian-overrides  rules
doc/en/: .directory  CMakeLists.txt  commands.html  compilation.html  configuration.html  credits.html  enable-kchildlock.html  export-import.html  faq.html  group-configuration.html  index.cache.bz2  index.docbook  index.html  installation.html  introduction.html  requirements.html  selecting-users-groups.html  systemtrayuser.html  user-configuration-application-duration.html  user-configuration-application-times.html  user-configuration-day-and-time.html  user-configuration-for-applications.html  user-configuration-login-time.html  user-configuration-time-duration.html
kcmodule/: .directory  CMakeLists.txt  ConfConnect.cpp  FillGui.cpp  GeneralPageS.cpp  GeneralPageS.h  KchildlockKCM.cpp  KchildlockKCM.h  UserGroupPageS.cpp  UserGroupPageS.h  deleteUserGroup.ui  generalPage.ui  kcm_kchildlock_kde.desktop  ruler_scene.cpp  ruler_scene.h  selectUserGroup.ui  slots_general.cpp  slots_usergroup.cpp  slots_usergroupapp.cpp  usergroupPage.ui  usergroup_ui_functions.cpp
pics/: .directory  CMakeLists.txt
po/: .directory  CMakeLists.txt  bg.po  cs.po  de.po  el.po  es.po  fr.po  kchildlock.pot  pt_BR.po  ru.po  sk.po  uk.po
