kde4_create_handbook(index.docbook INSTALL_DESTINATION ${HTML_INSTALL_DIR}/en SUBDIR kcontrol/kchildlock) 

install (FILES commands.html DESTINATION ${HTML_INSTALL_DIR}/en/kcontrol/kchildlock) 
install (FILES compilation.html DESTINATION ${HTML_INSTALL_DIR}/en/kcontrol/kchildlock) 
install (FILES configuration.html DESTINATION ${HTML_INSTALL_DIR}/en/kcontrol/kchildlock) 
install (FILES credits.html DESTINATION ${HTML_INSTALL_DIR}/en/kcontrol/kchildlock) 
install (FILES enable-kchildlock.html DESTINATION ${HTML_INSTALL_DIR}/en/kcontrol/kchildlock) 
install (FILES faq.html DESTINATION ${HTML_INSTALL_DIR}/en/kcontrol/kchildlock) 
install (FILES group-configuration.html DESTINATION ${HTML_INSTALL_DIR}/en/kcontrol/kchildlock) 
install (FILES index.html DESTINATION ${HTML_INSTALL_DIR}/en/kcontrol/kchildlock) 
install (FILES installation.html DESTINATION ${HTML_INSTALL_DIR}/en/kcontrol/kchildlock) 
install (FILES introduction.html DESTINATION ${HTML_INSTALL_DIR}/en/kcontrol/kchildlock) 
install (FILES requirements.html DESTINATION ${HTML_INSTALL_DIR}/en/kcontrol/kchildlock) 
install (FILES user-configuration-day-and-time.html DESTINATION ${HTML_INSTALL_DIR}/en/kcontrol/kchildlock) 
install (FILES user-configuration-for-applications.html DESTINATION ${HTML_INSTALL_DIR}/en/kcontrol/kchildlock) 
install (FILES systemtrayuser.html DESTINATION ${HTML_INSTALL_DIR}/en/kcontrol/kchildlock) 
install (FILES en_printscreen25.png DESTINATION ${HTML_INSTALL_DIR}/en/kcontrol/kchildlock) 
install (FILES en_printscreen21.png DESTINATION ${HTML_INSTALL_DIR}/en/kcontrol/kchildlock) 
install (FILES en_printscreen19.png DESTINATION ${HTML_INSTALL_DIR}/en/kcontrol/kchildlock) 
install (FILES en_printscreen18.png DESTINATION ${HTML_INSTALL_DIR}/en/kcontrol/kchildlock) 
install (FILES en_printscreen17.png DESTINATION ${HTML_INSTALL_DIR}/en/kcontrol/kchildlock) 
install (FILES en_printscreen15.png DESTINATION ${HTML_INSTALL_DIR}/en/kcontrol/kchildlock) 
install (FILES en_printscreen13.png DESTINATION ${HTML_INSTALL_DIR}/en/kcontrol/kchildlock) 
install (FILES en_printscreen12.png DESTINATION ${HTML_INSTALL_DIR}/en/kcontrol/kchildlock) 
install (FILES en_printscreen10.png DESTINATION ${HTML_INSTALL_DIR}/en/kcontrol/kchildlock) 
install (FILES en_printscreen9.png DESTINATION ${HTML_INSTALL_DIR}/en/kcontrol/kchildlock) 
install (FILES en_printscreen8.png DESTINATION ${HTML_INSTALL_DIR}/en/kcontrol/kchildlock) 
install (FILES en_printscreen7.png DESTINATION ${HTML_INSTALL_DIR}/en/kcontrol/kchildlock) 
install (FILES en_printscreen6.png DESTINATION ${HTML_INSTALL_DIR}/en/kcontrol/kchildlock) 
install (FILES en_printscreen5u.png DESTINATION ${HTML_INSTALL_DIR}/en/kcontrol/kchildlock) 
install (FILES en_printscreen5l.png DESTINATION ${HTML_INSTALL_DIR}/en/kcontrol/kchildlock) 
install (FILES en_printscreen4.png DESTINATION ${HTML_INSTALL_DIR}/en/kcontrol/kchildlock) 
install (FILES en_printscreen3.png DESTINATION ${HTML_INSTALL_DIR}/en/kcontrol/kchildlock) 
install (FILES en_printscreen2.png DESTINATION ${HTML_INSTALL_DIR}/en/kcontrol/kchildlock) 
install (FILES en_printscreen1.png DESTINATION ${HTML_INSTALL_DIR}/en/kcontrol/kchildlock) 
install (FILES en_printscreen1d.png DESTINATION ${HTML_INSTALL_DIR}/en/kcontrol/kchildlock) 
install (FILES en_printscreen1c.png DESTINATION ${HTML_INSTALL_DIR}/en/kcontrol/kchildlock) 
install (FILES en_printscreen1b.png DESTINATION ${HTML_INSTALL_DIR}/en/kcontrol/kchildlock) 
